flannel/cis/cis-deployment/f5-bigip-ctlr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec:
  # DO NOT INCREASE REPLICA COUNT
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bigip-ctlr-deployment
  template:
    metadata:
      labels:
        app: k8s-bigip-ctlr-deployment
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      containers:
        - name: k8s-bigip-ctlr
          image: "mdditt2000/k8s-bigip-ctlr:2.11.1"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            # See the k8s-bigip-ctlr documentation for information about
            # all config options
            # https://clouddocs.f5.com/containers/latest/
              "--bigip-username=$(BIGIP_USERNAME)",
              "--bigip-password=$(BIGIP_PASSWORD)",
              "--bigip-url=192.168.200.60",
              "--bigip-partition=k8s",
              "--namespace=default",
              "--pool-member-type=cluster",
              "--log-level=DEBUG",
              "--insecure=true",
              "--custom-resource-mode=true",
              "--as3-validation=true",
              "--log-as3-response=true",
          ]
      serviceAccountName: bigip-ctlr
